scss/components/_home.scss
.home {
  display: flex;
  flex-wrap: wrap;

  --block-padding: 2rem;
}

.home__hero {
  width: 100%;
  height: 100vh;
  line-height: 0;
  position: relative;

  img {
    width: 100%;
  }
}

.home__hero--center {
  height: 100%;
  background-size: cover;
  background-position: 50%;
}

.home__hero-text {
  position: absolute;
  display: flex;
  flex-wrap: wrap;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  align-items: center;
  align-content: center;
  justify-content: center;
}

.home__hero-caption {
  @extend %sans-serif;
  @include text-size($hero-caption);
  color: var(--pop-color);
  letter-spacing: 2px;
  flex-basis: 100%;
  margin-bottom: 0.6rem;
  padding: 0 1rem;
  text-align: center;

  @include respond-above(medium) {
    margin-bottom: 0.75rem;
    letter-spacing: 1px;
  }

  @include respond-above(large) {
    margin-bottom: 0.9rem;
    letter-spacing: 0;
  }

  @include respond-above(huge) {
    margin-bottom: -1rem;
    letter-spacing: -5px;
  }
}

.home__hero-lockup-wrapper {
  text-align: center;
  max-width: calc(100% - var(--block-padding));
}

.home__hero-lockup {
  max-width: 100%;
  filter: drop-shadow(5px 5px 5px #00000070);
}

.home__hero--desktop {
  display: none;

  @include respond-above(medium) {
    display: block;
  }
}

.home__hero--mobile {
  display: block;

  @include respond-above(medium) {
    display: none;
  }
}

.home__hero-button {
  flex-basis: 100%;
  text-align: center;

  &.button a {
    @extend %sans-serif;
    @include text-size($serif-l);
    margin-top: var(--block-padding);
    color: $text-color;
    background-color: $pop-color;
    padding: 0.3em 0.5em;
    display: inline-block;
    border-bottom: none;
    transition: background-color 0.2s ease;

    &:hover {
      color: $text-color;
      background-color: $background-color;
    }
  }

}

.home-module {
  display: flex;
  overflow: hidden;

  // @include respond-below(medium) {
  //   &:nth-child( 1 )  { order: 2; }
  //   &:nth-child( 2 )  { order: 1; }
  //   &:nth-child( 3 )  { order: 3; }
  //   &:nth-child( 4 )  { order: 5; }
  //   &:nth-child( 5 )  { order: 4; }
  //   &:nth-child( 6 )  { order: 6; }
  //   &:nth-child( 7 )  { order: 7; }
  //   &:nth-child( 8 )  { order: 9; }
  //   &:nth-child( 9 )  { order: 8; }
  //   &:nth-child( 10 ) { order: 10; }
  // };

  &:last-child {
    // border-top: 2px solid $pop-color;
    // border-bottom: none;
  }

}

.home-module--full {
  flex-basis: 100%;
}

.home-module--half {
  flex-basis: 100%;
  box-sizing: border-box;
  // border-bottom: 1px solid $pop-color;

  @include respond-above(medium) {
    flex-basis: 50%;
  };

  &:nth-child(2n) {
    // border-left: 1px solid $pop-color;
  }
}

// Statement
.home-module__statement {
  background-color: var(--pop-color);
  padding: var(--block-padding);

  p {
    @extend %sans-serif;
    @include text-size($modal-heading);
    font-weight: bold; 
  }
}

// Text Link
.home-module__text-link {
  display: flex;
  align-items: flex-start;
  align-content: center;
  padding: var(--block-padding);
  @extend %sans-serif;
  @include text-size($sans-xl);
  font-weight: bold;
}

.home-module__text-link a {
  text-decoration: none;
  border-bottom: none;
  display: flex;
}

.home-module__text-link-text {
  transition: color 0.2s ease;
}

.home-module__text-link-arrow {
  margin-right: 1rem;

  @include respond-above(medium) {
    margin-right: 2rem;
  }
}

.home-module__text-link .arrow {
  transform: scale(1.6);

  @include respond-above(medium) {
    transform: scale(3);    
  }
}

.home-module__background--white {
  background-color: var(--button-white);
  color: var(--button-black);

  & a:hover,
  & a:hover .home-module__text-link-text {
    color: var(--button-dark);
  }

  & a:hover .arrow-geometry {
    fill: var(--button-dark);
  }
}

.home-module__background--light {
  background-color: var(--button-light);
  color: var(--button-black);

  & a:hover,
  & a:hover .home-module__text-link-text {
    color: var(--button-dark);
  }

  & a:hover .arrow-geometry {
    fill: var(--button-dark);
  }
}

.home-module__background--medium {
  background-color: var(--button-medium);
  color: var(--button-black);

  & a:hover,
  & a:hover .home-module__text-link-text {
    color: var(--button-white);
  }

  & a:hover .arrow-geometry {
    fill: var(--button-white);
  }
}

.home-module__background--dark {
  background-color: var(--button-dark);
  color: var(--button-black);

  & a:hover,
  & a:hover .home-module__text-link-text {
    color: var(--button-white);
  }

  & a:hover .arrow-geometry {
    fill: var(--button-white);
  }
}

.home-module__background--black {
  background-color: var(--button-black);
  color: var(--button-dark);

  & .home-module__text-link-text {
    color: var(--button-dark);    
  }

  .arrow-geometry {
    fill: var(--button-dark);
  }

  & a:hover,
  & a:hover .home-module__text-link-text {
    color: var(--button-white);
  }

  & a:hover .arrow-geometry {
    fill: var(--button-white);
  }
}

// Image Link
.home-module__image-links {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.home-module__image-link {
  display: flex;
  flex-direction: column;
  padding: var(--block-padding);
  width: 100%;

  @include respond-above(medium) {
    width: 50%;
  }
}

.home-module__image-link-link {
  border: none;  
}

// .home-module__image-link-text {
//   @extend %sans-serif;
//   @include text-size($sans-m);
//   font-weight: bold;
// }

.home-module__image-link:nth-child(1),
.home-module__image-link:nth-child(4),
.home-module__image-link:nth-child(5),
.home-module__image-link:nth-child(8),
.home-module__image-link:nth-child(9),
.home-module__image-link:nth-child(12) {
  background-color: var(--button-white);
  color: var(--button-black);

  & a:hover .home-module__image-link-text {
    color: var(--button-dark);    
  }
}

.home-module__image-link:nth-child(2),
.home-module__image-link:nth-child(3),
.home-module__image-link:nth-child(6),
.home-module__image-link:nth-child(7),
.home-module__image-link:nth-child(10),
.home-module__image-link:nth-child(11) {
  background-color: var(--button-dark);
  color: var(--button-black);

  & a:hover .home-module__image-link-text {
    color: var(--button-white);    
  }
}

// Videos
.home-module__videos {
  padding: var(--block-padding);
  background-color: var(--button-light);
}

.home-module__videos-wrapper {
  margin-top: var(--block-padding);
}

.home-module__videos-wrapper {
  display: flex;
}

.home-module__videos-video {
  width: 100%;

  @include respond-above(medium) {
    width: 50%;  
  }
}

.home-module__videos-video:nth-child(odd) {
  padding-right: var(--block-padding);
}

.home-module__videos-video:nth-child(even) {
  padding-left: var(--block-padding);
}

.home-module__videos-video-wrapper {
  position: relative;
  display: block;
  width: 100%;
  height: 0;
  /* 9/16 = 0.5625, used for 16:9 videos
     see aspect-ratio classes below for more options */
  padding-bottom: 56.25%;
  margin-bottom: 0.5rem;
  clear: both;
  float: left;

  iframe {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
}

// Button

.home-module__button {
  flex-grow: 1;
  a {
    border-bottom: none;
    padding: var(--block-padding);
    display: block;

    &:hover {
      .arrow {
        transform: rotate(-45deg);
      }
    }
  }
}

.home-module__button--white {
  background-color: var(--button-white);
  a {
    &:hover {
      color: var(--button-dark);

      path, circle {
        fill: var(--button-dark);
      }
    }
  }
}

.home-module__button--light {
  background-color: var(--button-light);
  a {
    &:hover {
      color: var(--button-dark);

      path, circle {
        fill: var(--button-dark);
      }
    }
  }
}

.home-module__button--medium {
  background-color: var(--button-medium);
  a {
    &:hover {
      color: var(--button-white);

      path, circle {
        fill: var(--button-white);
      }
    }
  }
}

.home-module__button--dark {
  background-color: var(--button-dark);
  a {
    &:hover {
      color: var(--button-white);

      path, circle {
        fill: var(--button-white);
      }
    }
  }
}

.home-module__button-toggle {
  position: relative;
  width: 0.6em;
  display: inline-block;
  margin-left: 1rem;

  .arrow {
    width: 100%;
  }
}


// Narrative moment

.home-module__narrative {
  flex-basis: 100%;
}

.home-module__narrative-image {
  width: 100%;
}

.home-module__narrative-video {
  width: 100%;
  height: 0;
  position: relative;
  padding-bottom: 56.25%;

  iframe {
    position: absolute;
  	top: 0;
  	left: 0;
  	width: 100%;
  	height: 100%;
  }

}

.home-module__narrative-text {
  padding: var(--block-padding);
}

.home-module__narrative-title {
  margin-bottom: 1rem;
}

.home-module__narrative-description {
  p {
    max-width: 35em;
  }
}

.home-module__narrative-link {
  @extend %serif;
  margin: 1rem 0;

  a {
    padding: 0.3em 0.5em;
  }
}


// Quotation

.home-module__quote {
  background-color: var(--button-light);
  padding: var(--block-padding);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  p {
    @include text-size($sans-xl);
    @extend %sans-serif;
    font-weight: bold;
  }
}

.home-module__quote-citation {
  @include text-size($sans-s);
  font-weight: bold;
  margin-top: 1rem;
}


// List

.home-module__list {
  padding: var(--block-padding);
  background-color: var(--button-medium);
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
}

.home-module__list-text {
  @extend %sans-serif;
  @include text-size($sans-l);
  font-weight: bold;

  a {
    border-bottom: 0.1em solid $background-color;

    &:hover {
      color: $background-color;
    }

  }
}

.home-module__list-intro {
  @extend %serif;
  font-style: italic;
  font-weight: normal;
}

.home-module__list-more {
  margin-left: -0.3em;
}

.home-module__list-button {
  margin-top: var(--block-padding);
  a {
    display: inline-block;
  }
}


// Contact

.home-module__contact {
  width: 100%;
  padding: 4rem;
}

.home-module__contact-social {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  a {
    border-bottom: none;
    height: 4rem;
    width: 4rem;
    margin: 0 0.5rem 1rem 0.5rem;

    @include respond-above(small) {
      height: 6rem;
      width: 6rem;
      margin: 0 1rem 1rem 1rem;
    };

    @include respond-above(medium) {
      height: 8rem;
      width: 8rem;
      margin: 0 var(--block-padding) var(--block-padding) var(--block-padding);
    };

    &:hover {
      path, circle {
        fill: $text-color;
      }
    }
  }

  path, circle {
    fill: $pop-color;
    transition: fill 0.2s ease;
  }
}

.home-module__contact-hashtag {
  @extend %sans-serif;
  @include text-size($sans-m);
  font-weight: bold;
  text-align: center;
  color: $pop-color;
  margin-bottom: 1rem;
}

.home-module__contact-link {
  text-align: center;

  a {
    border-bottom: none;
    background-color: $pop-color;
    padding: 0.3em 0.5em;
  }
}

